sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:14: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return cpt
         ^AlgBubbleSort1:14: warning: enclosing method bubbleSort has result type Unit: return value discarded
  return cpt
  ^AlgBubbleSort1:18: error: type mismatch;
 found   : Unit
 required: Int
  cpt=bubbleSort()
                ^AlgBubbleSort1:21: error: type mismatch;
 found   : Unit
 required: Int
    cpt=bubbleSort()
                  ^